Styled Navbar and ensured that the hamburger worked on mobile size  screens

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,6 +4,13 @@ body{
    background-size: cover;
    height: 100vh;
 }
+:root{
+  --main-text:#8892b0 ;
+  --theme-color: #0a254e;
+  --highlights: #50ccb4;
+  --bold-text: #bec8e7;
+  --main-font: 'Calibre, "San Francisco", "SF Pro Text"';
+}
 
 .App {
   text-align: center;
